<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".CostsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        android:contentDescription="TODO"
        android:src="@drawable/money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/credits_button"
        android:layout_width="170dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#EB14E0"
        android:onClick="creditMe"
        android:text="@string/credits_text"
        android:textColor="#FFFEFE"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/payments_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/payments_button"
        android:layout_width="170dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#009688"
        android:onClick="utiliteMe"
        android:text="@string/mandatory_payments_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/transport_button"
        android:layout_width="170dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="#1FB825"
        android:onClick="transportMe"
        android:text="@string/transport_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/food_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/activities_button"
        android:layout_width="170dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="112dp"
        android:background="#9C27B0"
        android:onClick="funMe"
        android:text="@string/activities_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/food_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/transport_button"
        app:layout_constraintTop_toBottomOf="@+id/payments_button"
        app:layout_constraintVertical_bias="0.218" />

    <Button
        android:id="@+id/food_button"
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:layout_marginBottom="90dp"
        android:background="#F13426"
        android:onClick="foodMe"
        android:text="@string/food_text"
        android:textColor="#FFFEFE"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>